# pomodoro-tui

./: .gitignore  README.md  README.org  console-pomodoro.cabal  default.nix  pomodoro-tui.cabal  shell.nix
app/: Main.hs
src/: Core.hs  Types.hs  Utils.hs
