cabal-version:      2.4
name:               console-pomodoro
version:            0.1.0.0
license:            LGPL-3.0-only
author:             Equwece
maintainer:         99554597+Equwece@users.noreply.github.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Core
    build-depends:    
      base >=4.15.1.0,
      vty,
      lens,
      mtl,
      microlens,
      microlens-mtl,
      brick
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded

executable console-pomodoro
    main-is:          Main.hs
    build-depends:
        base >=4.15.1.0,
        brick,
        vty,
        console-pomodoro

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
