cabal-version:      2.4
name:               pomodoro-tui
version:            0.1.0.0
license:            LGPL-3.0-only
author:             Equwece
maintainer:         99554597+Equwece@users.noreply.github.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
      Core
      Utils
      Types
    build-depends:    
      base >=4.15.1.0,
      vty,
      lens,
      mtl,
      microlens,
      microlens-mtl,
      vector,
      dbus,
      containers,
      uuid,
      directory,
      yaml,
      brick
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded

executable pomodoro-tui
    main-is:          Main.hs
    build-depends:
        base >=4.15.1.0,
        brick,
        vty,
        dbus,
        containers,
        lens,
        pomodoro-tui

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
